fixed extra space bug for mobiles.. navbar touch bug fixed

--- a/frontEnd/app/styles/global.scss
+++ b/frontEnd/app/styles/global.scss
@@ -63,6 +63,10 @@ a:hover, a:focus, a:active {
 .padding10 {
   padding: 10px;
 }
+.row-fix {
+  margin-left: 0;
+  margin-right: 0;
+}
 .voffset40 {
   padding-top:80px;
 }
